tree-sitter-ion/test/corpus/sym_table.txt
==================
Identifier
==================
$ion_1_0
$ion_symbol_table::{
   symbols: ["foo"],
}
---
(source_file
   (symbol)
   (annotations (symbol))
   (struct (field_value_pair (symbol) (list (string))))
)
