tree-sitter-ion/test/corpus/symbols.txt
==================
Version Marker
==================
$ion_1_0

---
(source_file (version_marker ))

==================
Identifier
==================
foo
$ion_1_0

---
(source_file
   (symbol )
   (version_marker )
)

==================
Quoted Symbol
==================
'hello world'

---
(source_file (symbol))

==================
Symbol Address
==================
$12

---
(source_file (symbol))

==================
Symbol Table
==================
$ion_symbol_table::{
   symbols:["a"]
}

---
(source_file (symbol_table
   (symbol )
   (symbol )
   (list (string))
))

==================
Symbol Table: Quoted
==================
'$ion_symbol_table'::{
   symbols:["a"]
}

---
(source_file (symbol_table
    (symbol )
    (symbol )
    (list (string))
))
